Fix overflow bug

--- a/src/components/Section/Main/MainSounds/MainSound.module.scss
+++ b/src/components/Section/Main/MainSounds/MainSound.module.scss
@@ -176,8 +176,10 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 22%;
+    height: 25%;
     z-index: 10;
+
+    overflow: hidden;
 
     border-radius: 0 0 2rem 2rem;
     display: flex;
@@ -202,7 +204,7 @@
 
       border-radius: 0 0 0 2rem;
 
-      background-color: hsla(0, 0%, 7%, 0.7);
+      background-color: hsla(0, 0%, 7%, 0.8);
 
       opacity: 1;
 
